<resources>
    <string name="app_name">IELTSPrepApp</string>
    <string name="tv_screen_text">Prepare for IELTS with our free practice tests and answers.
        Use these tests to carry out timed practice sessions and develop your test technique. </string>
    <string name="btn_listening">LISTENING</string>
    <string name="btn_reading">READING</string>
    <string name="btn_speaking">SPEAKING</string>
    <string name="btn_writing">WRITING</string>
    <string name="submit_button_text">SUBMIT</string>
    <string name="submit_button_text_submitted">SUBMITTED</string>
    <string name="custom_media_player_title_text">Title</string>
    <string name="custom_media_player_description_text">Press for listening:</string>
    <string name="custom_media_player_description_text_playing">State : Playing</string>
    <string name="custom_media_player_description_text_stopped">State : Stopped</string>
    <string name="custom_fill_blank_view_submit_blank_text">SUBMIT</string>
    <string name="reading_first_warning">READING PASSAGE 1\n
        You should spend about 20 minutes on Questions\n
        1–13, which are based on Reading Passage 1 below.</string>
    <string name="reading_first_title">EXTRACTION AND PURIFICATION OF DRINKING WATER</string>
    <string name="reading_first_paragraph_first">Some consumers choose to purchase bottled drinking water,
        rather than relying on city tap water supplies. Bottled water has typically been extracted
        from underground sources. If water exists underground, but has no natural exit points,
        bottling companies may construct a water table well by drilling down to extract water from
        an unconfined aquifer. This is done when the Earth’s natural water level-known as a water
        table – is much lower than the Earth’s surface. In some cases, as with a valley or gully on
        a mountain, the level of the water table may be higher than the Earth’s surface, and a
        natural spring can emerge. Bottling companies are permitted to extract this water from a
        hole drilled into the underground spring, but the composition of the water must be identical
        to that of the naturally surfacing variety nearby.</string>
    <string name="reading_first_paragraph_second">Artesian water is drawn from a confined aquifer,
        a deep underground cavity of porous rock that holds water and bears pressure from a
        confining layer above it. This water can be accessed if companies drill a vertical channel
        down into the confined aquifer. Due to the pressurised nature of this aquifer, water will
        often rise up from within it and form a flowing artesian well, which appears as an explosive
        fountain at the earth’s surface. However, this only occurs when the surface is lower than
        the natural water table. If the surface is not lower than the natural water table, it is
        still possible to draw artesian water by using an extraction pump.</string>
    <string name="reading_first_paragraph_third">Some bottled water is advertised as ‘purified’,
        which means it has been subjected to a variety of different cleansing processes. A common
        filtering procedure, known as reverse osmosis, involves the water being pressed through
        microscopic membranes that prevent larger contaminants from passing through. The microscopic
        size of these holes is such that they can even obstruct germs, but they are most effective
        against undesirable materials such as salt, nitrates and lime scale. One disadvantage of
        reverse osmosis is that a lot of unusable water is generated as a by-product of the
        procedure; this must be thrown away.</string>
    <string name="reading_first_paragraph_forth">For treating pathogens, an impressive newer option
        is ultraviolet (UV) light. Powerful UV light has natural antibacterial qualities, so this
        process simply requires water to be subjected to a sufficient strength of UV light as it
        passes through a treatment chamber. The light neutralises many harmful germs by removing their
        DNA, thereby impeding their ability to replicate. A particularly impressive quality of
        UV light is its ability to neutralise highly resistant viral agents such as hepatitis.</string>
    <string name="reading_first_paragraph_fifth">The overall effects of UV light treatment are variable,
        however, which leaves many municipal water treatment processes relying on chlorination. Its
        powerful and comprehensive antimicrobial effect not-withstanding, chlorination is also extremely
        inexpensive and remains the only antimicrobial treatment capable of ensuring water remains
        contaminant-free all the way through the pipes and to the taps of domestic homes. Many members
        of the public remain suspicious of water that has been treated with such a harsh chemical.
        Its ease of use and affordability has meant that chlorine often plays an important role in
        making tainted water supplies safe for consumption immediately after natural disasters have
        occurred.</string>
    <string name="reading_first_paragraph_sixth">Some water also undergoes distillation. This involves
        water being boiled until it converts to steam, which then passes through a cooling tube and
        becomes water again. Toxic compounds and impurities such as heavy metal residue are left
        behind in this process, so the steamed water is typically cleaner than the pre-distilled
        version. Unfortunately, distillation equipment also removes up to fourteen types of beneficial
        minerals that naturally occur in water. Consequently, those who rely on distilled water may
        need to take mineral supplements.</string>
    <string name="reading_first_paragraph_seventh">In developed countries, all forms of drinking water
        are typically subject to stringent quality control processes, so there is little evidence to
        suggest importing bottled water at significant expense will be safer or healthier than regular
        tap water from a municipal drinking supply. Both tap water and bottled water are tested for
        pathogens and contaminants and, aside from isolated cases related to issues such as faulty
        plumbing or old pipes, tap water is harmless. Nevertheless, many purchasers of bottled water
        still justify their choice on the quite reasonable basis that tap water has a distinctly
        unpleasant aftertaste related to the chlorination process it has undergone.</string>
    <string name="reading_first_paragraph_eight"> In Questions 1–5 \n
        Label the diagram below.</string>
    <string name="reading_second_warning">READING PASSAGE 2 \n
        You should spend about 20 minutes on Questions \n
        14–26, which are based on Reading Passage 2 below.</string>
    <string name="reading_second_title">THE INTERNATIONAL STYLE</string>
    <string name="reading_second_paragraph_first">A) In the early decades of the 20th century,
        many Western cities experienced a steep rise in demand for commercial and civic premises,
        due to population growth and expansion of the white-collar professions. At the same time,
        architects were growing discontented with the ornamental spirals and decorative features
        in the prevailing design ethos of art deco or art moderne. Once considered the height of
        sophistication, these styles were quickly becoming seen as pretentious and old-fashioned.
        In this confluence of movements, a new style of architecture emerged. It was simple,
        practical and strong; a new look for the modern city and the modern man. It was named
        ‘the international style’.</string>
    <string name="reading_second_paragraph_second">B) Although the international style first emerged
        in Western Europe in the 1920s, it found its fullest expression in American architecture and
        was given its name in a 1932 book of the same title. The first hints of it in America can be
        seen on the Empire State Building in New York City, which was completed in 1931. The top of
        the building, with its tapered crown, is decidedly art deco, yet the uniform shaft of the
        lower two thirds represents a pronounced step in a new direction. Later efforts, such as the
        United Nations Secretariat building (1952) and the Seagram Building (1954) came to exemplify the
        ‘true’ international style.</string>
    <string name="reading_second_paragraph_third">C) The architects of the international style broke
        with the past by rejecting virtually all non-essential ornamentation. They created blockish,
        flat-roofed skyscrapers using steel, stone and glass. A typical building facade in this style
        has an instantly recognisable ribbon design, characterised by strips of floor-to-ceiling
        windows separated by strips of metal panelling. Interiors showcased open spaces and fluid
        movements between separate areas of the building.</string>
    <string name="reading_second_paragraph_forth">D) Fans of the international style of modern
        buildings celebrated their sleek and economical contribution to modern cityscapes. While
        pre-modern architecture was typically designed to display the wealth and prestige of its
        landlords or occupants, the international style in some ways exhibited a more egalitarian
        tendency. As every building and every floor looked much the same, there was little attempt
        to use these designs to make a statement. This focus on function and practicality reflected
        a desire in mid-century Western cities to ‘get on with business’ and ‘give everyone a
        chance’, rather than lauding the dominant and influential institutions of the day through
        features such as Romanesque columns.</string>
    <string name="reading_second_paragraph_fifth">E) Detractors, however, condemned these buildings
        for showing little in the way of human spirit or creativity. For them, the international
        style represented not an ethos of equality and progress, but an obsession with profit and
        ‘the bottom line’ that removed spiritual and creative elements from public life and public
        buildings. Under the dominance of the international style, cities became places to work and
        do business, but not to express one’s desires or show individuality. It is perhaps telling
        that while banks and government departments favoured the international style, arts
        organisations rarely opted for its austerity.</string>
    <string name="reading_second_paragraph_sixth">F) By the mid-1970s, the international style was
        ubiquitous across key urban centres, dominating skylines to such an extent that many
        travellers complained they could get off a plane and not know where they were. By their
        nature, buildings in this style demanded very little of architects in the way of imagination,
        and a younger generation of designers was yearning to express their ideas and experiment
        in novel and unexpected ways. The outcome was a shift toward postmodernism, which celebrated
        much of what the international style had dismissed: decoration, style without function, and
        an overall sense of levity. By the turn of the 1980s, the international style was considered
        outdated and was falling rapidly out of favour.</string>
    <string name="reading_third_warning">READING PASSAGE 3 \n
        You should spend about 20 minutes on Questions \n
        27–40, which are based on Reading Passage 3 below.</string>
    <string name="reading_third_title">THE MPEMBA EFFECT</string>
</resources>