<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/btn_listening_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/submit_button_text"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custom_media_player_background_color"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_media_player_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/custom_media_player_text_color"
                android:textAlignment="center"
                android:text="@string/custom_media_player_title_text"
                android:gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_media_player_button_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/custom_media_player_text_color"
                    android:text="@string/custom_media_player_description_text"
                    android:gravity="center_horizontal" />
                <ImageButton
                    android:id="@+id/play_pause_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/play"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_listening"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>